# adk-fleet-safety-multi-agent-system

./: .env_example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  GEMINI.md  Makefile  README.md  SHOWCASE_GUIDE.md  deployment_metadata.json  main.py  pyproject.toml  pytest.ini  run_evals.sh
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  agent.py  agent_engine_app.py
app/agents/fleet_safety/: __init__.py  agent.py  analytics_agent.py  dynamic_rerouter_agent.py  evalsetbcceb0.evalset.json  orchestrator.py  risk_monitor_agent.py  route_planner_agent.py  safety_scorer_agent.py
app/agents/fleet_safety/.adk/eval_history/: fleet_safety_fleet_safety_comprehensive_suite_1764454044.724304.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454044.7247832.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454044.72511.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454341.8397849.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454341.840569.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454341.840886.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454721.829889.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454721.830462.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454721.8311412.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454721.831417.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454761.4022558.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454761.402859.evalset_result.json  fleet_safety_fleet_safety_comprehensive_suite_1764454761.403808.evalset_result.json  (+9 more)
app/agents/fleet_safety/evaluation/: comprehensive.evalset.json  comprehensive_config.json  integration.evalset.json
app/app_utils/: __init__.py  deploy.py  requirements-deploy.txt  telemetry.py  typing.py
app/helpers/: __init__.py  env.py  weather.py
deployment/terraform/: github.tf  locals.tf  service_accounts.tf  storage.tf  variables.tf
deployment/terraform/dev/: iam.tf  storage.tf  variables.tf
deployment/terraform/vars/: env.tfvars
docs/ai_course/: README.md
docs/ai_course/kaggle_notebooks/: day-1a-from-prompt-to-action.ipynb  day-1b-agent-architectures.ipynb  day-2a-agent-tools.ipynb  day-2b-agent-tools-best-practices.ipynb  day-3a-agent-sessions.ipynb  day-3b-agent-memory.ipynb  day-4a-agent-observability.ipynb  day-4b-agent-evaluation.ipynb  day-5a-agent2agent-communication.ipynb  day-5b-agent-deployment.ipynb
docs/ai_course/kaggle_notebooks_to_scripts/: day-1-a.py  day-1-b.py  day-2a.py  day-2b.py  day-3a.py  day-3b.py  day-4a.py  day-4b.py  day-5a.py
notebooks/: adk_app_testing.ipynb  evaluating_fleet_safety_agent.ipynb
scripts/: query_deployed_agent.py
tests/integration/: test_database_persistence.py  test_dynamic_rerouter.py  test_mcp_tools.py  test_orchestrator.py  test_route_planner.py  test_safety_scorer.py
tests/load_test/: README.md  load_test.py
tests/unit/: test_analytics.py  test_orchestrator.py  test_risk_monitor.py  test_route_planner.py  test_safety_scorer.py
